trunk/Archive2/de/99979a0a0bca44/output
main.cpp: In function ‘int main()’:
main.cpp:6:14: error: invalid conversion from ‘int’ to ‘int*’ [-fpermissive]
 int *prout = 2;
              ^
main.cpp:8:19: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘int*’ [-Wformat=]
 printf("%d", prout);
                   ^
main.cpp:9:19: warning: format ‘%d’ expects argument of type ‘int*’, but argument 2 has type ‘int**’ [-Wformat=]
 scanf("%d", &prout);
                   ^
main.cpp:10:19: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘int*’ [-Wformat=]
 printf("%d", prout);
                   ^
main.cpp:9:20: warning: ignoring return value of ‘int scanf(const char*, ...)’, declared with attribute warn_unused_result [-Wunused-result]
 scanf("%d", &prout);
                    ^
