trunk/Archive2/de/99979a0a0bca44/main.cpp
#include <stdio.h>
#include <stdlib.h>

int main (void){

int *prout = 2;

printf("%d", prout);
scanf("%d", &prout);
printf("%d", prout);

return 0;
}